--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2020.12.5
 chardet==3.0.4
 discord.py==1.5.1
 google-search-results==2.0.0
+googlesearch-python
 googletrans==3.0.0
 h11==0.9.0
 h2==3.2.0
@@ -18,9 +19,9 @@ multidict==4.7.6
 requests==2.25.1
 rfc3986==1.4.0
 sniffio==1.2.0
+gtr
 urllib3==1.26.2
 yarl==1.5.1
-base64
 termcolor
 http.client
 dataclasses
